--- a/PCA_annotation_fgsea_targetvenns.Rmd
+++ b/PCA_annotation_fgsea_targetvenns.Rmd
@@ -17,11 +17,13 @@ library(eulerr)
 library(fgsea)
 library(GSEABase)
 library(GO.db)
+library(data.table)
 ```
 
 ## unfiltered PCA of all samples (Figure S2D)
 
 ```{r }
+#read in all peaks from matrix building; input file is peak matrix with boolean for whether or not a peak was called, and the counts overlapping the peak ranges, by sample, generated in the processing script
 all <- read.delim("/Users/kathryn/Reprocess_all_paper_datasets/KRG_all_final_peaksDF_finalGRs_rename.txt", header = TRUE, sep = "\t")
 
 all_samples <- read.delim("/Users/kathryn/Reprocess_all_paper_datasets/final_samples_KRG.txt", header = TRUE, sep = "\t")
@@ -62,11 +64,11 @@ xlab(paste0("PC1: ", percentVar[1], "% variance")) +
 ylab(paste0("PC2: ", percentVar[2], "% variance")) + theme_bw()
 ```
 
-## Annotate and filter for PCA calculations - this table is the basis for Table S3, and was used to test different filtering parameters for Figure S2A-C
+## Annotate and filter for PCA calculations
 
 ```{r }
 #annotate
-
+#gtf available at: https://www.vectorbase.org/downloads
 gtffile <- "/Users/kathryn/Aedes-aegypti-LVP_AGWG_BASEFEATURES_AaegL5.2.gtf"
 
 TxDb <- makeTxDbFromGFF(gtffile)
@@ -92,8 +94,8 @@ allannodf <- as.data.frame(allanno)
 
 allannodf$peakID <- paste0(allannodf$seqnames, ":", allannodf$start, "_", allannodf$end, ":", allannodf$strand)
 
-v <- merge(all, allannodf, by="peakID", all.x=TRUE)
-all <- v[,c(1:200, 206:214)]
+v <- merge(all, allannodf[,c(6:15)], by="peakID", all.x=TRUE)
+all <- v
 
 #get peak biological complexity (BC) - in how many samples by antibody/lysate was a peak called 
 
@@ -192,10 +194,7 @@ all$Aag2_Ago2_BCsample <- apply(all[Aag2Ago2b], 1, function(x) length(which(x>0)
 all$Aag2_rIgG_BCsample <- apply(all[Aag2rIgGb], 1, function(x) length(which(x>0)))
 all$Aag2_mIgG_BCsample <- apply(all[Aag2mIgGb], 1, function(x) length(which(x>0)))
 
-length(which(all$Aag2Ago1_peakBC > 0))
-length(which(all$Aag2Ago1_peakBC > 0 & grepl("3' UTR", all$annotation)))
-length(which(all$Aag2Ago1_peakBC > 0))
-length(which(all$Aag2Ago1_peakBC > 0 & grepl("3' UTR", all$annotation)))
+#write.table(all, "/Users/kathryn/Reprocess_all_paper_datasets/Supp_Figs/Final_matrix_all_peaks_add_filtering.txt", col.names = TRUE, row.names = FALSE, quote = FALSE, sep = "\t")
 
 #final filtering: peakBC > 0 and Ab is 10X above sample, nhi = 2 or more 
 Aag2 <- subset(all, all$Aag2Ago1_peakBC > 0 & all$Aag2_Ago1_nhipeaks > 1 & all$Aag2_Ago1_over_rIgG == "TRUE" | all$Aag2Ago2_peakBC > 0 & all$Aag2_Ago2_nhipeaks > 1 & all$Aag2_Ago2_over_mIgG == "TRUE")
@@ -241,6 +240,7 @@ ylab(paste0("PC2: ", percentVar[2], "% variance")) + theme_bw()
 ```
 
 ##aegypti PCA, Figure 3H
+
 ```{r}
 aegypti_samples <- subset(all_samples, all_samples$Lysate=="aegypti")
 aegypti_samples$Lysate <- NULL
@@ -278,9 +278,10 @@ xlab(paste0("PC1: ", percentVar[1], "% variance")) +
 ylab(paste0("PC2: ", percentVar[2], "% variance")) + theme_bw()
 ```
 
-##fgsea of targeted genes/pathways that drive Ago1 and Ago seperation by PCA; Figures 3F, 3I
+##fgsea of targeted genes/pathways that drive Ago1 and Ago seperation by PCA; Figures 3F and 3I and Tables S4 and S5
+
 ```{r}
-#read in eggNOG-mapper v2 tsv, mapping geneIDs to annotations and pathways 
+#read in eggNOG-mapper v2 tsv, mapping geneIDs to annotations and pathways (see goseq script for more details on transcript annotation/GO terms); annotation tsv available on my github 
 tsv <- read.delim("/Users/kathryn/Reprocess_all_paper_datasets/job_MM_e0ep_7ci_annotations.tsv", header = FALSE, sep ="\t",comment.char = "",skip = 4)
 tsvv <- tsv %>% dplyr::select(V1,V7) %>% mutate(Gene=gsub("-..","",V1)) %>% dplyr::select(-V1)
 tsvvGOs <- as.vector(tsvv$V7)
@@ -343,7 +344,221 @@ testaegypti <- sdvcaegypti %>% group_by(leadingEdge) %>% top_n(1, NES) %>% dplyr
 
 ```
 
-##Make annotation pie charts on filtered peaks, Figure 3A-D
+
+##Test filtering conditions, Figure S2A-C
+
+```{r}
+#check porportion of 3'UTRs for Ago1
+
+f <- subset(all, all$aegyptiAgo1_peakBC > 0)
+y <- subset(all, all$aegyptirIgG_peakBC > 0)
+a <- subset(all, all$Aag2Ago1_peakBC > 0)
+b <- subset(all, all$Aag2rIgG_peakBC > 0)
+ls <- mget(c("f", "y", "a","b"), envir = globalenv())
+ls <- lapply(ls, function(x) x <- x[,c("annotation")])
+names(ls) <- c("aegyptiAgo1", "aegyptirIgG", "Aag2Ago1", "Aag2rIgG")
+
+BC_UTRfun <- function(x) {
+UTR3 <- length(which(x=="3' UTR"))
+pUTR3 <- UTR3/(length(x))
+print(pUTR3)
+}
+
+ann_mat <- vector("list", length(ls))
+for(i in 1:length(ls)){
+ ann_mat[i] <- BC_UTRfun(ls[[i]])
+ ann_mat[[i]] <- as.data.frame(ann_mat[[i]])
+ names(ann_mat[[i]]) <- "one_peak"
+}
+names(ann_mat) <- names(ls)
+
+
+f <- subset(all, all$aegyptiAgo1_peakBC > 0 & all$aegypti_Ago1_over_rIgG == TRUE)
+y <- subset(all, all$aegyptirIgG_peakBC > 0 & all$aegypti_Ago1_over_rIgG == FALSE)
+a <- subset(all, all$Aag2Ago1_peakBC > 0 & all$Aag2_Ago1_over_rIgG == TRUE)
+b <- subset(all, all$Aag2rIgG_peakBC > 0 & all$Aag2_Ago1_over_rIgG == FALSE)
+
+ls <- mget(c("f", "y", "a","b"), envir = globalenv())
+names(ls) <- c("aegypti_Ago1", "aegypti_rIgG", "Aag2_Ago1", "Aag2_rIgG")
+
+temp <- vector("list", length(ls))
+for(i in 1:length(ls)){
+temp[[i]] <- ls[[i]][,c("annotation", c(paste0(names(ls[i]), "_nhipeaks")))]
+}
+names(temp) <- c("aegypti_Ago1", "aegypti_rIgG", "Aag2_Ago1", "Aag2_rIgG")
+
+bb  <- vector("list", length(ls))
+for(i in 1:length(ls)){
+ bb[i] <- BC_UTRfun(ls[[i]]$annotation)
+bb[[i]] <- as.data.frame(bb[[i]])
+ names(bb[[i]]) <- "plus_over_IgG"
+ ann_mat[[i]] <- bind_cols(ann_mat[[i]], bb[[i]])
+}
+
+
+BC_UTRfun_nhi <- function(x, nhi) {
+x <- subset(x, x[,2] >= nhi)
+UTR3 <- length(which(x$annotation=="3' UTR"))
+pUTR3 <- UTR3/(nrow(x))
+print(pUTR3)
+}
+
+bb  <- vector("list", length(temp))
+for(i in 1:length(temp)){
+ bb[i] <- BC_UTRfun_nhi(temp[[i]], 1)
+bb[[i]] <- as.data.frame(bb[[i]])
+ names(bb[[i]]) <- "plus_1nhi"
+ ann_mat[[i]] <- bind_cols(ann_mat[[i]], bb[[i]])
+}
+
+bb  <- vector("list", length(temp))
+for(i in 1:length(temp)){
+ bb[i] <- BC_UTRfun_nhi(temp[[i]], 2)
+bb[[i]] <- as.data.frame(bb[[i]])
+ names(bb[[i]]) <- "plus_2nhi"
+ ann_mat[[i]] <- bind_cols(ann_mat[[i]], bb[[i]])
+}
+
+ann_mat <- rbindlist(ann_mat, idcol = TRUE)
+#write.table(ann_mat, "/Users/kathryn/Reprocess_all_paper_datasets/Supp_Figs/Ago1_3UTR_enrichment_filtering.txt", col.names = TRUE, row.names = FALSE, quote = FALSE, sep ="\t")
+
+##3'UTR Ago2
+f <- subset(all, all$aegyptiAgo2_peakBC > 0)
+y <- subset(all, all$aegyptimIgG_peakBC > 0)
+a <- subset(all, all$Aag2Ago2_peakBC > 0)
+b <- subset(all, all$Aag2mIgG_peakBC > 0)
+ls <- mget(c("f", "y", "a","b"), envir = globalenv())
+ls <- lapply(ls, function(x) x <- x[,c("annotation")])
+names(ls) <- c("aegypti_Ago2", "aegypti_mIgG", "Aag2_Ago2", "Aag2_mIgG")
+
+ann_mat <- vector("list", length(ls))
+for(i in 1:length(ls)){
+ ann_mat[i] <- BC_UTRfun(ls[[i]])
+ ann_mat[[i]] <- as.data.frame(ann_mat[[i]])
+ names(ann_mat[[i]]) <- "one_peak"
+}
+names(ann_mat) <- names(ls)
+
+
+f <- subset(all, all$aegyptiAgo2_peakBC > 0 & all$aegypti_Ago2_over_mIgG == TRUE)
+y <- subset(all, all$aegyptimIgG_peakBC > 0 & all$aegypti_Ago2_over_mIgG == FALSE)
+a <- subset(all, all$Aag2Ago2_peakBC > 0 & all$Aag2_Ago2_over_mIgG == TRUE)
+b <- subset(all, all$Aag2mIgG_peakBC > 0 & all$Aag2_Ago2_over_mIgG == FALSE)
+
+ls <- mget(c("f", "y", "a","b"), envir = globalenv())
+names(ls) <- c("aegypti_Ago2", "aegypti_mIgG", "Aag2_Ago2", "Aag2_mIgG")
+
+temp <- vector("list", length(ls))
+for(i in 1:length(ls)){
+temp[[i]] <- ls[[i]][,c("annotation", c(paste0(names(ls[i]), "_nhipeaks")))]
+}
+names(temp) <- c("aegypti_Ago2", "aegypti_mIgG", "Aag2_Ago2", "Aag2_mIgG")
+
+bb  <- vector("list", length(ls))
+for(i in 1:length(ls)){
+ bb[i] <- BC_UTRfun(ls[[i]]$annotation)
+bb[[i]] <- as.data.frame(bb[[i]])
+ names(bb[[i]]) <- "plus_over_IgG"
+ ann_mat[[i]] <- bind_cols(ann_mat[[i]], bb[[i]])
+}
+
+bb  <- vector("list", length(temp))
+for(i in 1:length(temp)){
+ bb[i] <- BC_UTRfun_nhi(temp[[i]], 1)
+bb[[i]] <- as.data.frame(bb[[i]])
+ names(bb[[i]]) <- "plus_1nhi"
+ ann_mat[[i]] <- bind_cols(ann_mat[[i]], bb[[i]])
+}
+
+bb  <- vector("list", length(temp))
+for(i in 1:length(temp)){
+ bb[i] <- BC_UTRfun_nhi(temp[[i]], 2)
+bb[[i]] <- as.data.frame(bb[[i]])
+ names(bb[[i]]) <- "plus_2nhi"
+ ann_mat[[i]] <- bind_cols(ann_mat[[i]], bb[[i]])
+}
+
+ann_mat <- rbindlist(ann_mat, idcol = TRUE)
+#write.table(ann_mat, "/Users/kathryn/Reprocess_all_paper_datasets/Supp_Figs/Ago2_3UTR_enrichment_filtering.txt", col.names = TRUE, row.names = FALSE, quote = FALSE, sep ="\t")
+
+
+##Distal Intergenic Ago2
+f <- subset(all, all$aegyptiAgo2_peakBC > 0)
+y <- subset(all, all$aegyptimIgG_peakBC > 0)
+a <- subset(all, all$Aag2Ago2_peakBC > 0)
+b <- subset(all, all$Aag2mIgG_peakBC > 0)
+ls <- mget(c("f", "y", "a","b"), envir = globalenv())
+ls <- lapply(ls, function(x) x <- x[,c("annotation")])
+names(ls) <- c("aegypti_Ago2", "aegypti_mIgG", "Aag2_Ago2", "Aag2_mIgG")
+
+BC_DIfun <- function(x) {
+DI <- length(which(x=="Distal Intergenic"))
+pDI <- DI/(length(x))
+print(pDI)
+}
+
+ann_mat <- vector("list", length(ls))
+for(i in 1:length(ls)){
+ ann_mat[i] <- BC_DIfun(ls[[i]])
+ ann_mat[[i]] <- as.data.frame(ann_mat[[i]])
+ names(ann_mat[[i]]) <- "one_peak"
+}
+names(ann_mat) <- names(ls)
+
+
+f <- subset(all, all$aegyptiAgo2_peakBC > 0 & all$aegypti_Ago2_over_mIgG == TRUE)
+y <- subset(all, all$aegyptimIgG_peakBC > 0 & all$aegypti_Ago2_over_mIgG == FALSE)
+a <- subset(all, all$Aag2Ago2_peakBC > 0 & all$Aag2_Ago2_over_mIgG == TRUE)
+b <- subset(all, all$Aag2mIgG_peakBC > 0 & all$Aag2_Ago2_over_mIgG == FALSE)
+
+ls <- mget(c("f", "y", "a","b"), envir = globalenv())
+names(ls) <- c("aegypti_Ago2", "aegypti_mIgG", "Aag2_Ago2", "Aag2_mIgG")
+
+temp <- vector("list", length(ls))
+for(i in 1:length(ls)){
+temp[[i]] <- ls[[i]][,c("annotation", c(paste0(names(ls[i]), "_nhipeaks")))]
+}
+names(temp) <- c("aegypti_Ago2", "aegypti_mIgG", "Aag2_Ago2", "Aag2_mIgG")
+
+bb  <- vector("list", length(ls))
+for(i in 1:length(ls)){
+ bb[i] <- BC_DIfun(ls[[i]]$annotation)
+bb[[i]] <- as.data.frame(bb[[i]])
+ names(bb[[i]]) <- "plus_over_IgG"
+ ann_mat[[i]] <- bind_cols(ann_mat[[i]], bb[[i]])
+}
+
+
+BC_DIfun_nhi <- function(x, nhi) {
+x <- subset(x, x[,2] >= nhi)
+DI <- length(which(x=="Distal Intergenic"))
+pDI <- DI/(length(x))
+print(pDI)
+}
+
+bb  <- vector("list", length(temp))
+for(i in 1:length(temp)){
+ bb[i] <- BC_UTRfun_nhi(temp[[i]], 1)
+bb[[i]] <- as.data.frame(bb[[i]])
+ names(bb[[i]]) <- "plus_1nhi"
+ ann_mat[[i]] <- bind_cols(ann_mat[[i]], bb[[i]])
+}
+
+bb  <- vector("list", length(temp))
+for(i in 1:length(temp)){
+ bb[i] <- BC_DIfun_nhi(temp[[i]], 2)
+bb[[i]] <- as.data.frame(bb[[i]])
+ names(bb[[i]]) <- "plus_2nhi"
+ ann_mat[[i]] <- bind_cols(ann_mat[[i]], bb[[i]])
+}
+
+ann_mat <- rbindlist(ann_mat, idcol = TRUE)
+#write.table(ann_mat, "/Users/kathryn/Reprocess_all_paper_datasets/Supp_Figs/Ago2_distal_intergenic_enrichment_filtering.txt", col.names = TRUE, row.names = FALSE, quote = FALSE, sep ="\t")
+
+```
+
+##Make annotation pie charts on final filtered peaks, Figure 3A-D
+
 ```{r}
 cells_Ago1 <-subset(all, all$Aag2Ago1_peakBC > 0 & all$Aag2_Ago1_nhipeaks > 1 & all$Aag2_Ago1_over_rIgG == "TRUE")
 
@@ -357,10 +572,10 @@ aegypti_Ago2GR <- makeGRangesFromDataFrame(aegypti_Ago2,
                                      keep.extra.columns=FALSE,
                                      ignore.strand=FALSE,
                                      seqinfo=NULL,
-                                     seqnames.field="seqnames.x",
-                                     start.field="start.x",
-                                     end.field="end.x",
-                                     strand.field="strand.x",
+                                     seqnames.field="seqnames",
+                                     start.field="start",
+                                     end.field="end",
+                                     strand.field="strand",
                                      starts.in.df.are.0based=FALSE)
 
 aegypti_Ago2anno <- annotatePeak(aegypti_Ago2GR,
@@ -377,10 +592,10 @@ aegypti_Ago1GR <- makeGRangesFromDataFrame(aegypti_Ago1,
                                            keep.extra.columns=FALSE,
                                            ignore.strand=FALSE,
                                            seqinfo=NULL,
-                                           seqnames.field="seqnames.x",
-                                     start.field="start.x",
-                                     end.field="end.x",
-                                     strand.field="strand.x",
+                                           seqnames.field="seqnames",
+                                     start.field="start",
+                                     end.field="end",
+                                     strand.field="strand",
                                            starts.in.df.are.0based=FALSE)
 
 aegypti_Ago1GRanno <- annotatePeak(aegypti_Ago1GR,
@@ -396,10 +611,10 @@ cells_Ago1GR <- makeGRangesFromDataFrame(cells_Ago1,
                                            keep.extra.columns=FALSE,
                                            ignore.strand=FALSE,
                                            seqinfo=NULL,
-                                           seqnames.field="seqnames.x",
-                                     start.field="start.x",
-                                     end.field="end.x",
-                                     strand.field="strand.x",
+                                           seqnames.field="seqnames",
+                                     start.field="start",
+                                     end.field="end",
+                                     strand.field="strand",
                                            starts.in.df.are.0based=FALSE)
 
 cells_Ago1anno <- annotatePeak(cells_Ago1GR,
@@ -415,10 +630,10 @@ cells_Ago2GR <- makeGRangesFromDataFrame(cells_Ago2,
                                            keep.extra.columns=FALSE,
                                            ignore.strand=FALSE,
                                            seqinfo=NULL,
-                                           seqnames.field="seqnames.x",
-                                     start.field="start.x",
-                                     end.field="end.x",
-                                     strand.field="strand.x",
+                                           seqnames.field="seqnames",
+                                     start.field="start",
+                                     end.field="end",
+                                     strand.field="strand",
                                            starts.in.df.are.0based=FALSE)
 
 cells_Ago2anno <- annotatePeak(cells_Ago2GR,
@@ -429,9 +644,12 @@ cells_Ago2anno <- annotatePeak(cells_Ago2GR,
                                  overlap = "all")
 
 plotAnnoPie(cells_Ago2anno)
+
 ```
 
+
 ##Now do Venn Diagrams to compare genes in different filtered ab/lysate combinations, Figure S2F
+
 ```{r}
 #make list of unique genes in filtered 
 AA1 <- unique(subset(all$geneId, all$peakID %in% cells_Ago1$peakID))
@@ -450,8 +668,9 @@ plot(venn(filt))
 ```
 
 ## Venn Diagram to compare genes found in Zhang et al. and my aegypti Ago1 genes, Figure S2E
+
 ```{r}
-Zhang <- read.delim("/Users/kathryn/Reprocess_all_paper_datasets/Zhang_peaks.txt", header = TRUE, sep = "\t") #this is Dataset S03 from Zhang et al., 2017
+Zhang <- read.delim("/Users/kathryn/Reprocess_all_paper_datasets/Zhang_peaks.txt", header = TRUE, sep = "\t") #this is Dataset S03 from Zhang et al., 2017, also  available in my github
 reps <- grep("rep", colnames(Zhang), value = TRUE)
 Zhang$all_counts <- rowSums(Zhang[reps])
 #use their filtering criteria, at least one read/sample 
